--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>COMING SOON</title>
+  <title>Coming Soon</title>
   <style>
     body {
       margin: 0;
       height: 100vh;
       display: flex;
-      justify-content: center;
-      align-items: center;
+      justify-content: center;   /* centers horizontally */
+      align-items: center;       /* centers vertically */
       background-color: black;
       color: white;
       font-family: "Times New Roman", Times, serif;
-      font-size: 5rem; /* adjust size as needed */
+    }
+    h1 {
+      font-size: 5rem;           /* move font size to element */
+      text-align: center;        /* centers text inside */
     }
   </style>
 </head>
 <body>
-  COMING SOON
+  <h1>COMING SOON</h1>
 </body>
 </html>
