--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
       font-family: "Times New Roman", Times, serif;
     }
     h1 {
-      font-size: 5rem;           /* move font size to element */
-      text-align: center;        /* centers text inside */
+      font-size: 5rem;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <h1>COMING SOON</h1>
+  <h1>Coming Soon</h1>
+
+  <!-- Audio player -->
+  <audio autoplay loop>
+    <source src="song.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
 </body>
 </html>
