--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       margin: 0;
       height: 100vh;
       display: flex;
-      justify-content: center;   /* centers horizontally */
-      align-items: center;       /* centers vertically */
+      justify-content: center;
+      align-items: center;
       background-color: black;
       color: white;
       font-family: "Times New Roman", Times, serif;
@@ -22,12 +22,22 @@
   </style>
 </head>
 <body>
-  <h1>Coming Soon</h1>
+  <h1>COMING SOON</h1>
 
-  <!-- Audio player -->
-  <audio autoplay loop>
+  <audio id="bg-music" autoplay loop muted>
     <source src="song.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
+
+  <script>
+    // Try to unmute once the page loads
+    window.addEventListener('load', () => {
+      const audio = document.getElementById('bg-music');
+      audio.muted = false;
+      audio.play().catch(err => {
+        console.log("Autoplay blocked, waiting for user interaction.");
+      });
+    });
+  </script>
 </body>
 </html>
