--- a/index.html
+++ b/index.html
@@ -9,44 +9,36 @@
       margin: 0;
       height: 100vh;
       display: flex;
-      justify-content: center;   /* centers horizontally */
-      align-items: center;       /* centers vertically */
+      justify-content: center;
+      align-items: center;
       background-color: black;
       color: white;
       font-family: "Times New Roman", Times, serif;
-      flex-direction: column;
     }
     h1 {
       font-size: 5rem;
       text-align: center;
-    }
-    button {
-      margin-top: 20px;
-      padding: 15px 30px;
-      font-size: 1.5rem;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      background: white;
-      color: black;
     }
   </style>
 </head>
 <body>
   <h1>COMING SOON</h1>
 
-  <button onclick="playMusic()">Play Music</button>
-
-  <audio id="bg-music" loop>
+  <audio id="bg-music" autoplay loop muted>
     <source src="changes.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
   <script>
-    function playMusic() {
-      const audio = document.getElementById('bg-music');
-      audio.play();
-    }
+    window.addEventListener("load", () => {
+      const audio = document.getElementById("bg-music");
+      audio.muted = false; // try to unmute right after autoplay
+      audio.play().catch(err => {
+        console.log("Autoplay blocked, waiting for user interaction.");
+      });
+    });
   </script>
 </body>
 </html>
+
+
