--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <h1>COMING SOON</h1>
 
   <!-- Play button -->
-  <button id="play-btn">Play Music</button>
+  <button id="play-btn">PLAY</button>
 
   <!-- Background music -->
   <audio id="bg-music" loop>
@@ -72,4 +72,5 @@
   </script>
 </body>
 </html>
+
 
