--- a/index.html
+++ b/index.html
@@ -66,11 +66,12 @@
 
     btn.addEventListener("click", () => {
       music.play();
-      btn.textContent = "Playing..."; // optional change after click
+      btn.textContent = "PLAYING..."; // optional change after click
       btn.disabled = true;            // disable after starting
     });
   </script>
 </body>
 </html>
+
 
 
