--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Coming Soon</title>
+  <title>The Malgieri's</title>
   <style>
     body {
       margin: 0;
@@ -72,6 +72,7 @@
   </script>
 </body>
 </html>
+
 
 
 
