--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Malgieri's</title>
+
+  <!-- Favicon and iOS icon -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="/favicon.png">
+
+  <!-- Open Graph / Social Preview -->
+  <meta property="og:title" content="The Malgieri's">
+  <meta property="og:description" content="Welcome to The Malgieri's family site!">
+  <meta property="og:image" content="https://themalgieris.com/preview.png">
+  <meta property="og:url" content="https://themalgieris.com">
+  <meta name="twitter:card" content="summary_large_image">
+
   <style>
     body {
       margin: 0;
@@ -72,8 +84,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
