--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 </head>
 <body>
   <!-- Replace the src with your final image path -->
-  <img class="reveal-image" src="behind.jpg" alt="The Malgieri's Adventures" />
+  <img class="reveal-image" src="behind.jpg" alt="BABY MALGIERI COMING 2026" />
   <div class="vignette" aria-hidden="true"></div>
 
   <!-- Doors on top -->
@@ -177,3 +177,4 @@
   </script>
 </body>
 </html>
+
