--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 </head>
 <body>
   <!-- Background image -->
-  <img class="reveal-image" src="behind.jpg" alt="Family reveal background" />
+  <img class="reveal-image" src="behind.png" alt="Family reveal background" />
 
   <!-- Centered bold headline -->
   <div class="headline" aria-hidden="false">
@@ -217,3 +217,4 @@
   </script>
 </body>
 </html>
+
