--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <meta name="twitter:card" content="summary_large_image" />
 
   <style>
-    :root {
-      --door-speed: 4000ms;                  /* slower door open duration */
-      --door-ease: cubic-bezier(.2,.8,.2,1); /* gentle ease */
+    :root{
+      --door-speed: 4000ms;                 /* door open duration */
+      --door-ease: cubic-bezier(.2,.8,.2,1);
       --btn-speed: 400ms;
-      --image-fade: 3200ms;                  /* image/headline fade duration */
-      --image-fade-delay: 400ms;             /* starts just after doors begin */
+      --image-fade: 3200ms;                 /* image/text fade duration */
+      --image-fade-delay: 400ms;            /* begins just after doors start */
     }
 
     html, body { height: 100%; }
@@ -30,16 +30,14 @@
       margin: 0;
       background: #000;
       overflow: hidden;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji";
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans";
       color: #fff;
     }
 
-    /* Background image (starts dim + transparent) */
-    .reveal-image {
-      position: fixed;
-      inset: 0;
-      width: 100%;
-      height: 100%;
+    /* Fullscreen image (fades in) */
+    .reveal-image{
+      position: fixed; inset: 0;
+      width: 100%; height: 100%;
       object-fit: cover;
       z-index: 0;
       opacity: 0;
@@ -49,20 +47,15 @@
         opacity var(--image-fade) ease var(--image-fade-delay),
         filter var(--image-fade) ease var(--image-fade-delay);
     }
-    .open .reveal-image {
-      opacity: 1;
-      filter: brightness(1) saturate(1.05);
-    }
+    .open .reveal-image{ opacity: 1; filter: brightness(1) saturate(1.05); }
 
-    /* Headline overlay */
-    .headline {
+    /* Bottom-centered headline OVER the image */
+    .headline{
       position: fixed;
-      inset: 0;
-      display: grid;
-      place-items: center;
-      z-index: 1; /* over image, under doors initially */
+      left: 0; right: 0; bottom: 5vh;
+      z-index: 1;
       text-align: center;
-      padding: 2rem;
+      padding: 0 2rem;
       pointer-events: none;
       opacity: 0;
       transform: translateY(8px);
@@ -70,143 +63,149 @@
         opacity var(--image-fade) ease calc(var(--image-fade-delay) + 200ms),
         transform var(--image-fade) ease calc(var(--image-fade-delay) + 200ms);
     }
-    .headline h1 {
+    .headline h1{
       margin: 0;
-      font-weight: 900; /* bold */
-      font-size: clamp(28px, 6vw, 72px);
-      line-height: 1.1;
-      letter-spacing: 0.5px;
-      text-shadow: 0 6px 24px rgba(0,0,0,0.6), 0 1px 2px rgba(0,0,0,0.8);
+      font-weight: 900;
+      font-size: clamp(24px, 5vw, 56px);
+      line-height: 1.15;
+      letter-spacing: .5px;
+      text-shadow: 0 6px 24px rgba(0,0,0,.6), 0 1px 2px rgba(0,0,0,.8);
     }
-    .open .headline {
-      opacity: 1;
-      transform: translateY(0);
-    }
+    .open .headline{ opacity: 1; transform: translateY(0); }
 
-    /* Doors */
-    .stage {
-      position: fixed;
-      inset: 0;
+    /* Doors layer */
+    .stage{
+      position: fixed; inset: 0;
       z-index: 2;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
+      display: grid; grid-template-columns: 1fr 1fr;
       pointer-events: auto;
     }
-    .door {
+    .door{
       position: relative;
       background: #0e0e10;
-      box-shadow: inset 0 0 60px rgba(0,0,0,0.65);
-      overflow: hidden;
-      transform-style: preserve-3d;
-      will-change: transform;
+      box-shadow: inset 0 0 60px rgba(0,0,0,.65);
+      overflow: hidden; transform-style: preserve-3d; will-change: transform;
     }
-    .door::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: repeating-linear-gradient(
-        90deg,
-        rgba(255,255,255,0.06) 0 2px,
-        transparent 2px 12px
-      );
-      mix-blend-mode: overlay;
-      opacity: 0.15;
-      pointer-events: none;
+    .door::before{
+      content: ""; position: absolute; inset: 0;
+      background: repeating-linear-gradient(90deg, rgba(255,255,255,.06) 0 2px, transparent 2px 12px);
+      mix-blend-mode: overlay; opacity: .15; pointer-events: none;
     }
-    .left  { border-right: 2px solid rgba(255,255,255,0.08); }
-    .right { border-left:  2px solid rgba(255,255,255,0.08); }
+    .left{  border-right: 2px solid rgba(255,255,255,.08); }
+    .right{ border-left:  2px solid rgba(255,255,255,.08); }
 
-    /* Opening animation (slow + smooth) */
-    .open .left {
+    .open .left{
       transform: translateX(-100%) rotateY(8deg);
       transition: transform var(--door-speed) var(--door-ease);
     }
-    .open .right {
+    .open .right{
       transform: translateX(100%) rotateY(-8deg);
       transition: transform var(--door-speed) var(--door-ease);
     }
 
-    /* CTA overlay */
-    .overlay {
-      position: fixed;
-      inset: 0;
-      display: grid;
-      place-items: center;
-      z-index: 3;
-      pointer-events: none;
+    /* CTA button */
+    .overlay{
+      position: fixed; inset: 0;
+      display: grid; place-items: center;
+      z-index: 3; pointer-events: none;
     }
-    .cta {
+    .cta{
       pointer-events: auto;
-      appearance: none;
-      border: 0;
-      border-radius: 999px;
+      appearance: none; border: 0; border-radius: 999px;
       padding: 16px 26px;
       font-size: clamp(16px, 2.2vw, 24px);
-      font-weight: 700;
-      letter-spacing: 0.3px;
+      font-weight: 700; letter-spacing: 0.3px;
       color: #0b0b0c;
-      background: linear-gradient(180deg, #ffffff, #dcdcdc);
-      box-shadow: 0 8px 30px rgba(0,0,0,0.45), inset 0 0 0 1px rgba(0,0,0,0.12);
+      background: linear-gradient(180deg, #fff, #dcdcdc);
+      box-shadow: 0 8px 30px rgba(0,0,0,.45), inset 0 0 0 1px rgba(0,0,0,.12);
       cursor: pointer;
-      transition: transform var(--btn-speed) ease, box-shadow var(--btn-speed) ease, opacity 300ms ease;
+      transition: transform var(--btn-speed) ease, box-shadow var(--btn-speed) ease;
     }
-    .cta:hover { transform: translateY(-1px); box-shadow: 0 12px 38px rgba(0,0,0,0.5), inset 0 0 0 1px rgba(0,0,0,0.12); }
-    .cta:active { transform: translateY(0); }
+    .cta:hover{ transform: translateY(-1px); box-shadow: 0 12px 38px rgba(0,0,0,.5), inset 0 0 0 1px rgba(0,0,0,.12); }
+    .cta:active{ transform: translateY(0); }
 
-    /* Fade the button away on click */
-    .open .overlay { animation: overlayFade var(--door-speed) ease forwards; }
-    @keyframes overlayFade { to { opacity: 0; visibility: hidden; } }
+    /* Fade the button on click */
+    .open .overlay{ animation: overlayFade var(--door-speed) ease forwards; }
+    @keyframes overlayFade{ to{ opacity: 0; visibility: hidden; } }
 
-    /* Subtle vignette */
-    .vignette {
-      position: fixed;
-      inset: 0;
-      pointer-events: none;
-      z-index: 1; /* above image, under doors */
-      background: radial-gradient(ellipse at center, rgba(0,0,0,0) 40%, rgba(0,0,0,0.6) 100%);
+    /* Vignette */
+    .vignette{
+      position: fixed; inset: 0; pointer-events: none;
+      z-index: 1;
+      background: radial-gradient(ellipse at center, rgba(0,0,0,0) 40%, rgba(0,0,0,.6) 100%);
       opacity: .9;
       transition: opacity var(--image-fade) ease var(--image-fade-delay);
     }
-    .open .vignette { opacity: .6; }
+    .open .vignette{ opacity: .6; }
 
     /* Reduced motion */
-    @media (prefers-reduced-motion: reduce) {
-      .open .left, .open .right { transition-duration: 0ms; transform: translateX(-100%); }
-      .open .right { transform: translateX(100%); }
-      .open .overlay, .headline, .reveal-image, .vignette { transition-duration: 0ms; }
-      .reveal-image, .headline { opacity: 1; transform: none; }
+    @media (prefers-reduced-motion: reduce){
+      .open .left, .open .right{ transition-duration: 0ms; transform: translateX(-100%); }
+      .open .right{ transform: translateX(100%); }
+      .open .overlay, .headline, .reveal-image, .vignette{ transition-duration: 0ms; }
+      .reveal-image, .headline{ opacity: 1; transform: none; }
     }
   </style>
 </head>
 <body>
-  <!-- Background image -->
-  <img class="reveal-image" src="behind.png" alt="Family reveal background" />
+  <!-- Fullscreen background image -->
+  <img class="reveal-image" src="behind.pngg" alt="Family reveal background" />
 
-  <!-- Centered bold headline -->
+  <!-- Bottom-centered bold headline -->
   <div class="headline" aria-hidden="false">
     <h1>BABY MALGIERI COMING 2026</h1>
   </div>
 
   <div class="vignette" aria-hidden="true"></div>
 
-  <!-- Doors on top -->
+  <!-- Doors -->
   <div class="stage" aria-hidden="true">
     <div class="door left"></div>
     <div class="door right"></div>
   </div>
 
-  <!-- Call-to-action button -->
+  <!-- CTA -->
   <div class="overlay">
     <button class="cta" id="begin" aria-label="Let the adventures begin">Let The Adventures Begin</button>
   </div>
 
-  <script>
-    const root = document.documentElement;
-    const body = document.body;
-    const begin = document.getElementById('begin');
+  <!-- Background music (plays on click) -->
+  <audio id="bg-music" preload="auto" loop>
+    <source src="Day.mp3" type="audio/mpeg" />
+    Your browser does not support the audio element.
+  </audio>
 
-    begin.addEventListener('click', () => {
+  <script>
+    const root  = document.documentElement;
+    const body  = document.body;
+    const begin = document.getElementById('begin');
+    const music = document.getElementById('bg-music');
+
+    function fadeInAudio(audio, target = 0.6, ms = 2000){
+      try{
+        audio.volume = 0;
+        const steps = 20;
+        const stepTime = ms / steps;
+        let i = 0;
+        const ramp = setInterval(() => {
+          i++;
+          audio.volume = Math.min(target, (i/steps)*target);
+          if(i >= steps) clearInterval(ramp);
+        }, stepTime);
+      }catch(e){ /* volume not supported on some mobile browsers */ }
+    }
+
+    begin.addEventListener('click', async () => {
       body.classList.add('open');
+
+      // Try to play music on the user gesture
+      try{
+        await music.play();
+        fadeInAudio(music, 0.6, 2000); // gentle fade-in
+      }catch(err){
+        // If playback is blocked/muted, we just proceed silently.
+        console.warn('Audio playback was blocked:', err);
+      }
 
       // Disable door interactions after the animation
       const doorMs = parseFloat(getComputedStyle(root).getPropertyValue('--door-speed'));
@@ -217,4 +216,3 @@
   </script>
 </body>
 </html>
-
