--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 </head>
 <body>
   <!-- Fullscreen background image -->
-  <img class="reveal-image" src="behind.pngg" alt="Family reveal background" />
+  <img class="reveal-image" src="behind.png" alt="Family reveal background" />
 
   <!-- Bottom-centered bold headline -->
   <div class="headline" aria-hidden="false">
@@ -216,3 +216,4 @@
   </script>
 </body>
 </html>
+
