--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
       color: #fff;
     }
 
-    /* Fullscreen image (fades in) */
+    /* Fullscreen image (fits fully, no cropping) */
     .reveal-image{
       position: fixed; inset: 0;
       width: 100%; height: 100%;
-      object-fit: cover;
+      object-fit: contain;  /* show full image */
+      background-color: black; /* fill gaps with black */
       z-index: 0;
       opacity: 0;
       filter: brightness(0.8) saturate(1.05);
-      transform: scale(1.03);
       transition:
         opacity var(--image-fade) ease var(--image-fade-delay),
         filter var(--image-fade) ease var(--image-fade-delay);
@@ -149,7 +149,7 @@
 </head>
 <body>
   <!-- Fullscreen background image -->
-  <img class="reveal-image" src="behind.png" alt="Family reveal background" />
+  <img class="reveal-image" src="behind.jpg" alt="Family reveal background" />
 
   <!-- Bottom-centered bold headline -->
   <div class="headline" aria-hidden="false">
@@ -198,16 +198,15 @@
     begin.addEventListener('click', async () => {
       body.classList.add('open');
 
-      // Try to play music on the user gesture
+      // Try to play music on user gesture
       try{
         await music.play();
-        fadeInAudio(music, 0.6, 2000); // gentle fade-in
+        fadeInAudio(music, 0.6, 2000);
       }catch(err){
-        // If playback is blocked/muted, we just proceed silently.
         console.warn('Audio playback was blocked:', err);
       }
 
-      // Disable door interactions after the animation
+      // Disable door interactions after animation
       const doorMs = parseFloat(getComputedStyle(root).getPropertyValue('--door-speed'));
       setTimeout(() => {
         document.querySelector('.stage').style.pointerEvents = 'none';
@@ -216,4 +215,3 @@
   </script>
 </body>
 </html>
-
