--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
 </head>
 <body>
   <!-- Fullscreen background image -->
-  <img class="reveal-image" src="behind.jpg" alt="Family reveal background" />
+  <img class="reveal-image" src="behind.png" alt="Family reveal background" />
 
   <!-- Bottom-centered bold headline -->
   <div class="headline" aria-hidden="false">
-    <h1>BABY MALGIERI COMING 2026</h1>
+    <h1>BABY MALGIERI COMING MAY 2026!</h1>
   </div>
 
   <div class="vignette" aria-hidden="true"></div>
@@ -166,7 +166,7 @@
 
   <!-- CTA -->
   <div class="overlay">
-    <button class="cta" id="begin" aria-label="Let the adventures begin">Let The Adventures Begin</button>
+    <button class="cta" id="begin" aria-label="Let the adventures begin">Let The Adventures Begin...</button>
   </div>
 
   <!-- Background music (plays on click) -->
@@ -215,3 +215,4 @@
   </script>
 </body>
 </html>
+
