--- a/index.html
+++ b/index.html
@@ -103,26 +103,47 @@
       transition: transform var(--door-speed) var(--door-ease);
     }
 
-    /* CTA button */
+    /* CTA overlay */
     .overlay{
       position: fixed; inset: 0;
       display: grid; place-items: center;
       z-index: 3; pointer-events: none;
     }
-    .cta{
+
+    /* Fancy glowing button */
+    .cta {
       pointer-events: auto;
-      appearance: none; border: 0; border-radius: 999px;
-      padding: 16px 26px;
-      font-size: clamp(16px, 2.2vw, 24px);
-      font-weight: 700; letter-spacing: 0.3px;
-      color: #0b0b0c;
-      background: linear-gradient(180deg, #fff, #dcdcdc);
-      box-shadow: 0 8px 30px rgba(0,0,0,.45), inset 0 0 0 1px rgba(0,0,0,.12);
+      appearance: none;
+      border: none;
+      border-radius: 50px;
+      padding: 18px 36px;
+      font-size: clamp(18px, 2.5vw, 26px);
+      font-weight: 700;
+      letter-spacing: 1px;
+      color: #fff;
+      background: linear-gradient(135deg, #ff416c, #ff4b2b);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.4), 0 0 15px rgba(255,75,43,0.5);
       cursor: pointer;
-      transition: transform var(--btn-speed) ease, box-shadow var(--btn-speed) ease;
+      position: relative;
+      overflow: hidden;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
-    .cta:hover{ transform: translateY(-1px); box-shadow: 0 12px 38px rgba(0,0,0,.5), inset 0 0 0 1px rgba(0,0,0,.12); }
-    .cta:active{ transform: translateY(0); }
+    .cta::before {
+      content: "";
+      position: absolute;
+      top: -50%; left: -50%;
+      width: 200%; height: 200%;
+      background: radial-gradient(circle, rgba(255,255,255,0.3) 0%, transparent 70%);
+      transform: rotate(25deg);
+      opacity: 0;
+      transition: opacity 0.4s ease;
+    }
+    .cta:hover {
+      transform: translateY(-3px) scale(1.05);
+      box-shadow: 0 12px 28px rgba(0,0,0,0.5), 0 0 25px rgba(255,75,43,0.7);
+    }
+    .cta:hover::before { opacity: 1; }
+    .cta:active { transform: scale(0.98); }
 
     /* Fade the button on click */
     .open .overlay{ animation: overlayFade var(--door-speed) ease forwards; }
@@ -153,7 +174,7 @@
 
   <!-- Bottom-centered bold headline -->
   <div class="headline" aria-hidden="false">
-    <h1>BABY MALGIERI COMING MAY 2026!</h1>
+    <h1>BABY MALGIERI COMING 2026!</h1>
   </div>
 
   <div class="vignette" aria-hidden="true"></div>
@@ -215,4 +236,3 @@
   </script>
 </body>
 </html>
-
