--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
   <!-- Background music (plays on click) -->
   <audio id="bg-music" preload="auto" loop>
-    <source src="Day.mp3" type="audio/mpeg" />
+    <source src="Sun.mp3" type="audio/mpeg" />
     Your browser does not support the audio element.
   </audio>
 
@@ -236,3 +236,4 @@
   </script>
 </body>
 </html>
+
