--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
   <style>
     :root{
-      --door-speed: 4000ms;                 /* door open duration */
+      --door-speed: 8000ms;                 /* SUPER slow door open duration */
       --door-ease: cubic-bezier(.2,.8,.2,1);
       --btn-speed: 400ms;
-      --image-fade: 3200ms;                 /* image/text fade duration */
-      --image-fade-delay: 400ms;            /* begins just after doors start */
+      --image-fade: 6000ms;                 /* slower image/text fade */
+      --image-fade-delay: 800ms;            /* begins just after doors start */
     }
 
     html, body { height: 100%; }
@@ -38,8 +38,8 @@
     .reveal-image{
       position: fixed; inset: 0;
       width: 100%; height: 100%;
-      object-fit: contain;  /* show full image */
-      background-color: black; /* fill gaps with black */
+      object-fit: contain;
+      background-color: black;
       z-index: 0;
       opacity: 0;
       filter: brightness(0.8) saturate(1.05);
@@ -236,4 +236,3 @@
   </script>
 </body>
 </html>
-
